2000-06-19  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/update.c:
	    Organically relating to  smtpopen() -> "retryat +60"
	    code, if NEXT thing to feed has its expiry tag in
	    past (and non-zero), then *stay* in CFSTATE_STUFFING
	    so that possible next thing will be quickly diagnosed
	    out of the queue at the end of its expiry time..
	    ALSO fixed double-counting of attempts on therads
	    and vertices!

	* transports/smtp/smtp.c:
	    If smtpopen() yields EX_TEMPFAIL, always do diagnostics
	    with 60 seconds timeout flag.. ( -> "retryat +60" )
	    so that the entire message queue will not be retried
	    there just for no good reason..

	* smtpserver/smtptls.c:
	    Following some discussion at OpenSSL list, I noticed
	    that DH type keys are not supported by our current code.
	    Now we should match that of OpenSSL: apps/s_server.c
	    sample code again.

	* transports/smtp/smtp.c:
	    Allow  ssfgets()  to enlarge the input string in runtime,
	    which enables us latter to make weird things like multiple
	    hosts feeding in same connection... (perhaps)

	* transports/smtp/smtp.c:
	    Continued the rewrite by handling weird looking errors
	    from some sites which mistakenly limit the number of
	    recipients per smtp connection (session)!  Will do
	    close of the socket after each case where RCPT TO yields
	    400 series code.  (That will also knock on some real
	    temporary failures, like DNS timeouts when recipient
	    does verify the through-going address for e.g. MX analysis.)

	* transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Rewrote (in a sane way) the pipelined smtp_sync()
	    status code formulation so that we won't reject
	    recipients just because their system yields 400
	    code for all RCPTs which they get, and then said
	    to DATA that 'no recipients given yet'..

2000-06-14  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/cf/fqdnalias.cf: